## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

bindir = /opt/lss/modules

AM_CFLAGS =\
	 -Wall

bin_PROGRAMS = cmd_proc

cmd_proc_SOURCES = \
	main.c\
	../src/misc.c

cmd_proc_LDFLAGS = 

cmd_proc_LDADD = 

