## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

bindir = /opt/lss/bin

AM_CFLAGS =\
	 -Wall

bin_PROGRAMS = lss_mgr

lss_mgr_SOURCES = \
	main.c\
	../src/misc.c\
	../src/lib_xml.c

lss_mgr_LDFLAGS = 

lss_mgr_LDADD = 

