## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

bindir = /opt/lss/modules

AM_CFLAGS =\
	 -Wall

bin_PROGRAMS = mgr_proc

mgr_proc_SOURCES = \
	main.c\
	../src/misc.c

mgr_proc_LDFLAGS = 

mgr_proc_LDADD = 

