## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

bindir = /opt/lss/modules

AM_CFLAGS =\
	 -Wall

bin_PROGRAMS = ok_proc

ok_proc_SOURCES = \
	main.c\
	../src/misc.c

ok_proc_LDFLAGS = 

ok_proc_LDADD = 

