## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

bindir = /opt/lss/modules

AM_CFLAGS =\
	 -Wall

bin_PROGRAMS = run_proc

run_proc_SOURCES = \
	main.c\
	../src/misc.c\
	../src/lib_xml.c

run_proc_LDFLAGS = 

run_proc_LDADD = 

