## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

bindir = /opt/lss/bin

AM_CFLAGS =\
	 -Wall

bin_PROGRAMS = lss_ldr

lss_ldr_SOURCES = \
	main.c\
	misc.c\
	lib_xml.c

lss_ldr_LDFLAGS = 

lss_ldr_LDADD = 

